# MOT-deepsort

./: CMakeLists.txt  README.md  clean.sh  make.sh  makeall.sh  makedemo.sh  makelib.sh  run.sh
demo/: CMakeLists.txt
demo/demo/: main.cpp
demo/image/: VCAImage.h
src/api/: deepsort.cpp  deepsort.h
src/feature/: model.h
src/image/: VCAImage.cpp
src/matching/: track.cpp  track.h  tracker.cpp
src/matching_app/: main.cpp
